--- a/index.html
+++ b/index.html
@@ -20,14 +20,13 @@
 
 <a href="youtube.html" target="tela"><img src="imagens/logo-youtube.jpg" alt="youtube"></a><br>
 
-<a href="githuh.html" target="tela"><img src="imagens/logo-github.jpg" alt="github"></a><br>
+<a href="github.html" target="tela"><img src="imagens/logo-github.jpg" alt="github"></a><br>
 
-<a href="#" target="tela"><img src="imagens/logo-instagram.jpg" alt="instagram"></a><br>
+<a href="instagram.html" target="tela"><img src="imagens/logo-instagram.jpg" alt="instagram"></a><br>
 
+<a href="twitter.html" target="tela"><img src="imagens/logo-twitter.jpg" alt="twitter"></a><br>
 
-<a href="#" target="tela"><img src="imagens/logo-twitter.jpg" alt="twitter"></a><br>
-
-<a href="#" target="tela"><img src="imagens/logo-facebook.jpg" alt="facebook"></a><br>
+<a href="face.html" target="tela"><img src="imagens/logo-facebook.jpg" alt="facebook"></a><br>
 </section>
 
 
