mudando as foto do pefil

--- a/face.html
+++ b/face.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="social.css">
 </head>
 <body>
-    <img src="imagens/tela-facebook.jpg" alt="facebook">
+    <img src="imagens/meuface.jpg" alt="facebook">
     <a href="#">ACESSE</a>
 </body>
 </html>
