--- a/github.html
+++ b/github.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="social.css">
 </head>
 <body>
-    <img src="imagens/tela-github.jpg" alt="GitHub">
-    <a href="#">ACESSE</a>
+    <img src="imagens/meugit.jpg" alt="GitHub">
+    <a href="https://github.com/" target="_blank">ACESSE</a>
 </body>
 </html>
