--- a/instagram.html
+++ b/instagram.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="social.css">
 </head>
 <body>
-    <img src="imagens/tela-instagram.jpg" alt="Instagram">
-    <a href="#">ACESSE</a>
+    <img src="imagens/meuinsta.jpg" alt="Instagram">
+    <a href="https://www.instagram.com/brunacarolinasas/" target="_blank">ACESSE</a>
 </body>
 </html>
