--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
     <title>Projeto Redes Sociais</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="estilo/style.css">
 </head>
 <body>
     <main>
